--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -1,4 +1,4 @@
-<div class="row col-md-12">
+<div *ngIf="checkView" class="row col-md-12">
   <div class="col-md-5" style="display: flex; flex-direction: column">
     <div class="form-group">
       <div class="label_item">{{'menu.contract.template.list' | translate}} <span class="require_star">*</span></div>
