fix bug chinh sua bo cot thao tac trong luong xly hd

--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -18,10 +18,9 @@
         <!--Chọn {{'typeOfSignEmail' | translate}} hoặc {{'user.phone' | translate}}-->
         <div class="participants--input" style="display: flex">
           <div class="participants__name">
-            <div class="label_detail text-color">
-
+            <div class="label_detail text-color" *ngIf="changeTypeSign">
               <div>
-                <input type="radio" name="checkPhoneMailOrgSigner_" [value]="email"/>
+                <input type="radio"  (change)="changeTypeSign(0)" name="checkPhoneMailOrgSigner_" [value]="email" checked/>
               </div>&nbsp;
               <div>
                 {{'typeOfSignEmail' | translate}}
@@ -31,7 +30,7 @@
           <div class="participants__name">
             <div class="label_detail text-color">
               <div>
-                <input type="radio" name="checkPhoneMailOrgSigner_" [value]="phone"/>
+                <input type="radio" (change)="changeTypeSign(1)" name="checkPhoneMailOrgSigner_" [value]="phone" />
               </div>&nbsp;
               <div>
                 {{'typeOfSignPhone' | translate}}
@@ -49,7 +48,6 @@
 
               <!--Trường hợp typeOfSignEmail-->
               <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                
                 >
 
                 <!--Trường hợp typeOfSignPhone-->
@@ -90,8 +88,8 @@
           </div>
         </div>
 
-        <div class="participants--input" style="display: flex">
-          <div  class="participants__name" style="width: 90%">
+        <div class="participants--input" style="display: flex" >
+          <div  class="participants__name" style="width: 90%" *ngIf="isCheckRadio">
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
@@ -99,13 +97,13 @@
             </div>
           </div>
 
-          <!-- <div class="participants__name" style="width: 90%">
+          <div class="participants__name" style="width: 90%" *ngIf="!isCheckRadio">
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" >
             </div>
-          </div> -->
+          </div>
         </div>
 
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là usbtoken-->
@@ -127,8 +125,11 @@
             </div>
           </div>
         </div> -->
-
-      </div>
+    </div>
+    <div class="footer-btn" style="text-align: center; margin-top: 20px;">
+        <button (click)="handleCancel()">{{"btn.update" | translate}}</button>
+        <button (click)="handleCancel()">{{"exit" | translate}}</button>
+    </div>
 
   </div>
 </div>
