--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -10,7 +10,7 @@
                 <span style="color: '#106DB6'">{{'orginator' | translate}}</span>
                 <span style="color: #8B8B8B">({{this.timeCreate}})</span>
             </div>
-            <div *ngIf ="!this.reasonCancel " class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
+            <div *ngIf ="!this.reasonCancel && listCheckSmsEmail && isEndDate" class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
                 <span style="color: '#106DB6'">{{'action' | translate}}</span>
             </div>
         </div>
@@ -43,15 +43,14 @@
                 </div>
             
 
-                <div class="col-md-2" style="text-align: center;display: flex;justify-content: center">
-                    <div *ngIf = "d.statusNumber != 0  && d.statusNumber !=4 && isHiddenButton && listCheckSmsEmail">
-                    <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
+                <div class="col-md-2" style="text-align: center;display: flex;justify-content: center"
+                *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate">
+                    <div *ngIf = "d.statusNumber != 0">
+                        <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
                     </div>
-                    <div>
-                        
-                    </div>
+
                     <div class="div_icon">
-                    <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d)" /> -->
+                        <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d)" /> -->
                     </div>
                 </div>
             </div>
@@ -83,12 +82,13 @@
                     <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
                 </div>
 
-                <div class="col-md-2" style="text-align: center; display: flex;justify-content: center"> 
-                    <div *ngIf = "d.statusNumber != 0 && isHiddenButton && d.statusNumber !=4 && listCheckSmsEmail">
+                <div class="col-md-2" style="text-align: center; display: flex;justify-content: center"
+                *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate"> 
+                    <div *ngIf = "d.statusNumber != 0">
                         <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
                     </div>
                     <div class="div_icon">
-                    <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/> -->
+                        <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/> -->
                     </div>
                 </div>
             </div>
