--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -1,5 +1,5 @@
 <!-- form step 1 -->
-<div *ngIf="checkView">
+<div>
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
