--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -316,3 +316,16 @@
 .center {
   text-align: center;
 }
+
+.call-page {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.call-page1 {
+  padding: 0;
+  border: none;
+  background: none; 
+  margin-left: 5px
+}
