--- a/src/app/main/contract-signature/components/index/index.component.html
+++ b/src/app/main/contract-signature/components/index/index.component.html
@@ -2,5 +2,5 @@
 <!--  <app-header-contract [datas]="datas"></app-header-contract>-->
   <app-infor-coordination *ngIf="this.datas.step == 'infor-coordination'" [datas]="this.datas"></app-infor-coordination>
   <app-add-contract *ngIf="this.datas.step == 'confirm-coordination'" #AddContract [datas]="this.datas"></app-add-contract>
-  <app-footer-signature *ngIf="this.datas.step == 'infor-coordination'" [datas]="datas" (submitChanges)="submitEvents($event)"></app-footer-signature>
+  <!-- <app-footer-signature *ngIf="this.datas.step == 'infor-coordination'" [datas]="datas" (submitChanges)="submitEvents($event)"></app-footer-signature> -->
 </div>
