--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -21,9 +21,9 @@
 
                         <div *ngIf="d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh'" class="content-drag" id="element-drag" style="height: 102px; flex-direction: column" [ngStyle]="setWidth(d)">
                             <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
-                            <!-- <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
-                                'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span> -->
-                            <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1" id="element-drag" style="height: 102px;" [ngStyle]="setWidth(d)">
+                             <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
+                                'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span> 
+                            <!-- <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1" id="element-drag" style="height: 102px;" [ngStyle]="setWidth(d)">
                                 <img [src]="d.sign_unit == 'chu_ky_so' ? 'assets/img/img_sign_number.svg' : ''">
                                 <span *ngIf="d.sign_unit == 'chu_ky_so'">{{'sign.digital'|translate}}</span>
                             </div>
@@ -31,7 +31,7 @@
                             <div *ngIf="d.sign_unit == 'chu_ky_anh'" class="content-drag" id="element-drag" style="height: 102px;" [ngStyle]="setWidth(d)">
                                 <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : ''" [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
                                 <span *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.image.ekyc' |translate}}</span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
     </div>
 
     <!--  file content-->
-    <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
+    <div (scroll)="scroll($event)" id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
         <div id="pdf-viewer-step-3">
             <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
                 <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d)">
@@ -105,11 +105,42 @@
     </div>
 </div>
 <div class="footer-sample-contract">
-    <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
-    <div>
-        <button (click)="next()" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
+
+    <div class="col-md-3">
+        <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
+    </div>
+
+    <div class="col-md-9">
+        <div class="center">
+            <a>
+                <button class="call-page" (click)="firstPage()">
+                  <img *ngIf="this.page1" src="assets/img/previousbold.svg">
+                  <img *ngIf="!this.page1" src="assets/img/firstpage.svg">
+                </button>
+                <button class="call-page1" (click)="previousPage()">
+                  <img *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+                  <img *ngIf="!this.page1" src="assets/img/previous.svg">
+                </button>
+          
+                <input [(ngModel)]="pageNum" style="box-sizing: border-box;width: 50px;height: 30px;background: #FFFFFF;border: 1px solid #87CAFF;border-radius: 5px; margin-left: 5px" type="text" (keyup.enter)="onEnter($event)" />
+                <a style="font-family: 'Lexend Deca';font-style: normal;font-weight: 400;font-size: 18px;line-height: 22px;align-items: center;text-transform: uppercase;color: #000000;margin-left: 5px">/{{this.pageNumber}}</a>
+                <button class="call-page1" (click)="onNextPage()" id="prev">
+                  <img *ngIf="this.pageLast" src="assets/img/next.svg">
+                  <img *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+                </button>
+          
+                <button class="call-page1" (click)="lastPage()" id="prev">
+                  <img *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+                  <img *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+                </button>
+            </a>
+            <a style="position: absolute; right: 5px;">
+                <button (click)="next()" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
+            </a>
+        </div>
     </div>
 </div>
+
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
     <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
