--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
@@ -1,6 +1,6 @@
 .sample-contract {
-  //height: calc(100vh - 221px);
-  height: calc(100vh - 226px);
+  // height: calc(100vh - 246px);
+  height: calc(100vh - 287px);
 
   &__file {
     //position: relative;
@@ -13,7 +13,8 @@
   }
 
   .viewer-pdf {
-    height: calc(100vh - 154px);
+    // height: calc(100vh - 246px);
+    height: calc(100vh - 287px);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
@@ -28,8 +29,8 @@
   }
 
   .viewer-pdf.isDrag {
-    //height: calc(100vh - 221px);
-    height: calc(100vh - 226px);
+    // height: calc(100vh - 246px);
+    height: calc(100vh - 287px);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
@@ -49,6 +50,9 @@
 
   &__information {
     &--drag {
+       #element-drag{
+        height: 100px;
+      }
       .content-drag {
         //cursor: pointer;
         width: 100%;
@@ -60,7 +64,26 @@
         text-align: center;
         display: flex;
         justify-content: center;
-        align-items: center
+        align-items: center;
+        flex-direction: column;
+      }
+      .content-drag1 {
+        //cursor: pointer;
+        width: 100%;
+        height: 30px;
+        background-color: #EBF8FF;
+        border-radius: 5px;
+        border: 1px solid #106DB6;
+        color: #106DB6;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+      .show-list-name-class{
+        display: inline-block; 
+        margin-bottom: 15px;
       }
 
       .show-list-name-class:nth-last-child(4) {
@@ -122,7 +145,7 @@
     .flex-column {
       .location {
         display: flex;
-        justify-content: space-around
+        justify-content: space-around;
       }
 
       .location-drag {
@@ -152,15 +175,10 @@
       }
     }
 
-    //.location-change {
-    //  overflow: auto;
-    //  height: calc(50vh - 100px);
-    //}
-
     @media screen and (max-height: 781px) {
       .location-change {
+        height: 210px;
         overflow: auto;
-        height: 225px;
       }
     }
   }
@@ -240,10 +258,11 @@
   .name-sig-img-daky {
     position: absolute;
     background-color: yellow;
-    border: 1px solid #ddd;
+    border-radius: 5px;
     top: -15px;
     left: 6px;
     padding: 0 4px;
+    border: 1px solid #ddd;
   }
 
   .sig-img-daky {
@@ -273,11 +292,11 @@
   padding-left: 7px;
 }
 
-#element-drag-text,
-#element-drag {
-  //display: inline-block;
-  //width: ;
-}
+// #element-drag-text,
+// #element-drag {
+//   //display: inline-block;
+//   //width: ;
+// }
 
 //style button
 .action-button {
@@ -317,6 +336,335 @@
   }
 }
 
-::-webkit-scrollbar {
+@media screen and (min-width:1224px) and (max-width:1280px){
+    .sample-contract{
+        height: calc(100vh - 260px);
+        .label{
+          font-size: 14px;
+        }
+        .viewer-pdf.isDrag{
+          background-color: #f3f7f9; 
+          position: relative;
+        }
+        &__information{
+            &--drag {
+                .content-drag {
+                    //cursor: pointer;
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag span{
+                    width: 50px;
+                    margin-left: 5px;
+                }
+                .content-drag1 {
+                    width: 100%;
+                    height: 30px;
+                    background-color: #EBF8FF;
+                    border-radius: 5px;
+                    border: 1px solid #106DB6;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag1 span{
+                    width: 50px;            
+                }
+            }
+            .flex-column{
+                .location {
+                    display: flex;
+                    justify-content: space-around;
+                }
+                .location-drag{
+                    float: left;
+                    align-items: center;
 
+                    div {
+                        width: 48px;
+                        color: #666666;
+                        text-align: center;
+                        float: left;
+                        padding-right: 15px;
+                        padding-top: 0px;
+                    }
+
+                    input {
+                        width: 55px;
+                        height: 35px;
+                    }
+                }
+            }
+        }
+    }
 }
+
+@media screen and (min-width:1280px) and (max-width:1440px){
+  .sample-contract{
+      height: calc(100vh - 260px);
+      .label{
+        font-size: 14px;
+      }
+      .viewer-pdf.isDrag{
+        background-color: #f3f7f9; 
+        position: relative;
+      }
+      &__information{
+          &--drag {
+              .content-drag {
+                  //cursor: pointer;
+                  width: 100%;
+                  height: 30px;
+                  background-color: #EBF8FF;
+                  border-radius: 5px;
+                  border: 1px solid #106DB6;
+                  color: #106DB6;
+                  text-align: center;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  flex-direction: row;
+              }
+              .content-drag span{
+                  width: 50px;
+                  margin-left: 5px;
+              }
+              .content-drag1 {
+                  width: 100%;
+                  height: 30px;
+                  background-color: #EBF8FF;
+                  border-radius: 5px;
+                  border: 1px solid #106DB6;
+                  color: #106DB6;
+                  text-align: center;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  flex-direction: row;
+              }
+              .content-drag1 span{
+                  width: 50px;            
+              }
+          }
+          .flex-column{
+              .location {
+                  display: flex;
+                  justify-content: space-around;
+              }
+              .location-drag{
+                  float: left;
+                  align-items: center;
+
+                  div {
+                      width: 48px;
+                      color: #666666;
+                      text-align: center;
+                      float: left;
+                      padding-right: 15px;
+                      padding-top: 0px;
+                  }
+
+                  input {
+                      width: 55px;
+                      height: 35px;
+                  }
+              }
+          }
+      }
+  }
+}
+
+@media screen and (min-width:1440px) and (max-width:1600px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        .content-drag {
+          //cursor: pointer;
+          width: 100%;
+          height: 30px;
+          background-color: #EBF8FF;
+          border-radius: 5px;
+          border: 1px solid #106DB6;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag span{
+          width: 50px;
+          margin-left: 5px;
+        }
+        .content-drag1 {
+          width: 100%;
+          height: 30px;
+          background-color: #EBF8FF;
+          border-radius: 5px;
+          border: 1px solid #106DB6;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag1 span{
+          width: 50px;            
+        }
+      }
+      .flex-column{
+        .location {
+          display: flex;
+          justify-content: space-around;
+        }
+        .location-drag{
+          float: left;
+          align-items: center;
+
+          div {
+            width: 40px;
+            color: #666666;
+            text-align: center;
+            float: left;
+            padding-right: 15px;
+            padding-top: 10px;
+          }
+    
+          input {
+            width: 80px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1600px) and (max-width:1824px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        .content-drag {
+          //cursor: pointer;
+          width: 100%;
+          height: 30px;
+          background-color: #EBF8FF;
+          border-radius: 5px;
+          border: 1px solid #106DB6;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag span{
+          width: 50px;
+          margin-left: 5px;
+        }
+        .content-drag1 {
+          //cursor: pointer;
+          width: 100%;
+          height: 30px;
+          background-color: #EBF8FF;
+          border-radius: 5px;
+          border: 1px solid #106DB6;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag1 span{
+          width: 50px;            
+        }
+      }
+      .flex-column{
+        .location {
+          display: flex;
+          justify-content: space-around;
+        }
+        .location-drag{
+          float: left;
+          align-items: center;
+
+          div {
+            width: 55px;
+            color: #666666;
+            text-align: center;
+            float: left;
+            padding-right: 15px;
+            padding-top: 10px;
+          }
+    
+          input {
+            width: 80px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-height:630px) and (max-height:780px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        #element-drag{
+          height: 80px;
+        }
+        .show-list-name-class{
+          #element-drag{
+            margin-bottom: 1px;
+          }
+        }
+      }
+      &--user-sign {
+        label {
+          padding-bottom: 1px;
+        }
+      }
+      .location-change {
+        height: 150px;
+        overflow: auto;
+      }
+    }
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.call-page {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.call-page1 {
+  padding: 0;
+  border: none;
+  background: none; 
+  margin-left: 5px
+}
+
+
