--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -10,7 +10,7 @@
                 <span style="color: '#106DB6'">{{'orginator' | translate}}</span>
                 <span style="color: #8B8B8B">({{this.timeCreate}})</span>
             </div>
-            <div *ngIf ="!this.reasonCancel && listCheckSmsEmail && isEndDate" class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
+            <div  *ngIf ="!this.reasonCancel && listCheckSmsEmail && isEndDate" class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
                 <span style="color: '#106DB6'">{{'action' | translate}}</span>
             </div>
         </div>
@@ -43,16 +43,22 @@
                 </div>
             
 
-                <div class="col-md-2" style="text-align: center;display: flex;justify-content: center"
-                *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate">
-                    <div *ngIf = "d.statusNumber != 0">
-                        <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
+                <div class="col-md-2" style="text-align: center;display: flex;justify-content: center">
+                    <div *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate">
+                        <div *ngIf = "d.statusNumber != 0">
+                            <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
+                        </div>
+
+                        <div *ngIf = "d.statusNumber != 0" class="div_icon">
+                        </div>
                     </div>
 
-                    <div class="div_icon">
-                        <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d)" /> -->
+                    <div *ngIf = "!isHiddenButton || listCheckSmsEmail || !isEndDate">
                     </div>
                 </div>
+
+                <!-- <div class="col-md-2" *ngIf="!isHiddenButton || !listCheckSmsEmail || isEndDate">
+                </div> -->
             </div>
 
             <div *ngIf = "this.reasonCancel && (d.statusNumber == 2 || d.statusNumber == 3 || d.statusNumber == 4)" style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
