--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -631,6 +631,15 @@
   margin-left: 5px
 }
 
+.input1 {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
 
 // @media screen and (min-width:1824px) {
 //     .sample-contract{
