--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
@@ -404,3 +404,13 @@
   background: none; 
   margin-left: 5px
 }
+
+.input1 {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
