--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -360,6 +360,16 @@
   margin-left: 5px
 }
 
+input {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
+
 .input-mobile {
   box-sizing: border-box;
   width: 50px;
