--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -336,6 +336,16 @@
   }
 }
 
+.input1 {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
+
 @media screen and (min-width:1224px) and (max-width:1280px){
     .sample-contract{
         height: calc(100vh - 260px);
