--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -138,7 +138,7 @@
                   <img width="16px" height="20px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
                 </button>
             </a>
-            <a style="position: absolute; right: 5px;">
+            <a style="position: absolute; right: 5px;bottom:25px">
                 <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
                 style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
                 <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
