--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -137,7 +137,6 @@
             
             <a style="text-align: center">
                 <button class="call-page" (click)="firstPage()">
-                  <!-- <img width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg"> -->
                   <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
                   <img  width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg">
                 </button>
@@ -156,12 +155,12 @@
                   <img width="16px" height="20px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
                   <img width="16px" height="20px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
                 </button>
-              </a>
-            <a style="position: absolute; right: 5px;">
-                <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-                style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
-                <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
             </a>
+                <a style="position: absolute;right: 5px; bottom:65px">
+                    <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
+                    style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
+                    <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
+                </a>
         </div>
     </div>
 </div>
