--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
@@ -22,13 +22,11 @@
 <!-- && !signTemplate -->
 <div
   class="text-sign"
-  *ngIf="sign.sign_unit == 'text'"
+  *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'"
 >
   <span [ngStyle]="getStyleText()" class="font-style" id="input-text">{{ getText(sign) }}</span>
 </div>
-<div
-  class="text-sign"
-  *ngIf="sign.sign_unit == 'so_tai_lieu'"
->
-  <span [ngStyle]="getStyleText()" class="font-style" id="input-text">{{ 'contract.number' | translate }}</span>
-</div>
+
+<!-- <div>
+  <span  *ngIf="sign.sign_unit == 'so_tai_lieu'" [ngStyle]="getStyleText()" class="font-style" id="input-text">{{ getText(sign) }}</span>
+</div> -->
