--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,18 +1,18 @@
 <div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-        <div style="z-index: 2;text-align: left;">Loại ký: Ký số bằng token</div>
-        <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
-        <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
     </div>
 </div>
 
 <div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-        <div style="z-index: 2;text-align: left;">Loại ký: Ký số bằng token</div>
-        <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
-        <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
     </div>
 </div>
 
@@ -20,19 +20,19 @@
 <div class="signature-container" id="export-html-ekyc" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-        <div style="z-index: 2;text-align: left;">Loại ký: {{'sign.eKYC' | translate}}</div>
+        <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign.eKYC' | translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'user.sign' | translate}}: {{nameCompany}}</div>
-        <div style="z-index: 2;text-align: left;">Đã xác thực qua CMT/CCCD: {{cardId}}</div>
-        <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        <div style="z-index: 2;text-align: left;">{{'verified.cardid' | translate}}: {{cardId}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
     </div>
 </div>
 
 <div id="export-html-hsm1" style="min-height: 80px;display: flex; font-size: 9px">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-        <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: {{'sign_by_hsm' | translate}}</span>
+        <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
-        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
     </div>
 </div>
 
@@ -40,9 +40,9 @@
 <div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-        <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: {{'sign.by.pki' | translate}}</span>
+        <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
-        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
     </div>
 </div>
