--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -134,7 +134,6 @@
     </div>
     <div class="col-md-9">
         <div class="center">
-            
             <a style="text-align: center">
                 <button class="call-page" (click)="firstPage()">
                   <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
@@ -155,13 +154,20 @@
                   <img width="16px" height="20px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
                   <img width="16px" height="20px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
                 </button>
-            </a>
-                <a style="position: absolute;right: 5px; bottom:65px">
+
+                <div style="position: absolute;right: 5px;margin-top: -35px;">
                     <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
                     style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
                     <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
-                </a>
+                </div>
+            </a>
+               
         </div>
+        <!-- <a style="position: absolute;right: 5px;">
+            <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
+            style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
+            <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
+        </a> -->
     </div>
 </div>
 
