--- a/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
+++ b/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
@@ -1,3 +1,3 @@
 <div [style.width.px]="width" [style.height.px]="height" [ngStyle]="getStyleText()">
-  <p id="text-sign" style="background-color: white;">{{textSign}}</p>
+  <p id="text-sign">{{textSign}}</p>
 </div>
