--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -354,3 +354,13 @@
   color: #000000;
   margin-left: 5px
 }
+
+.input-mobile {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 38px;
+  height: 20px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
