--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -75,26 +75,26 @@
     (pagechanging)="pagechanging($event)"
     ></pdf-viewer>
 
-    <div class="flex-column" style="text-align: center">
+    <div class="flex-column" style="text-align: center;margin-top: 2px;">
       <button class="call-page" (click)="firstPageMobile()">
-        <img *ngIf="this.page1" src="assets/img/previousbold.svg">
-        <img *ngIf="!this.page1" src="assets/img/firstpage.svg">
+        <img width="14px" height="18px" *ngIf="this.page1" src="assets/img/previousbold.svg">
+        <img width="14px" height="18px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
       </button>
       <button class="call-page1" (click)="previousPageMobile()">
-        <img *ngIf="this.page1" src="assets/img/firstpagebold.svg">
-        <img *ngIf="!this.page1" src="assets/img/previous.svg">
+        <img width="10px" height="14px" *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+        <img width="10px" height="14px" *ngIf="!this.page1" src="assets/img/previous.svg">
       </button>
-  
+
       <input class="input-mobile" [(ngModel)]="pageMobile" type="text" />
       <a class="page-number-mobile">/{{this.pageNumber}}</a>
       <button class="call-page1" id="prev" (click)="onNextPageMobile()">
-        <img *ngIf="this.pageLast" src="assets/img/next.svg">
-        <img *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+        <img width="10px" height="14px" *ngIf="this.pageLast" src="assets/img/next.svg">
+        <img width="10px" height="14px" *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
       </button>
-  
+
       <button class="call-page1" id="prev" (click)="lastPageMobile()">
-        <img *ngIf="this.pageLast" src="assets/img/lastpage.svg">
-        <img *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+        <img width="14px" height="18px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+        <img width="14px" height="18px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
       </button>
     </div>
 
