--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -360,15 +360,17 @@
   margin-left: 5px
 }
 
-input {
+
+.input-mobile {
   box-sizing: border-box; 
   text-align: center; 
-  width: 40px;
-  height: 22px;
+  width: 38px;
+  height: 20px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
 }
+
 
 .input-mobile {
   box-sizing: border-box;
