--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -372,19 +372,14 @@
 }
 
 
-.input-mobile {
-  box-sizing: border-box;
-  width: 50px;
-  height: 30px;
+.input-web {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
-  margin-left: 5px;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  font-family: 'Lexend Deca'
 }
 
 .page-number-mobile {
