fix bug giao diện web iphone

--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -85,8 +85,8 @@
         <img width="10px" height="14px" *ngIf="!this.page1" src="assets/img/previous.svg">
       </button>
 
-      <input class="input-mobile" [(ngModel)]="pageMobile" type="text" />
-      <a class="page-number-mobile">/{{this.pageNumber}}</a>
+      <input class="input-mobile" [(ngModel)]="pageMobile" type="text"/>&nbsp;/ &nbsp;{{this.pageNumber}}
+
       <button class="call-page1" id="prev" (click)="onNextPageMobile()">
         <img width="10px" height="14px" *ngIf="this.pageLast" src="assets/img/next.svg">
         <img width="10px" height="14px" *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
