--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -347,7 +347,7 @@
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 22px;
   align-items: center;
   text-transform: uppercase;
@@ -358,9 +358,10 @@
 .input-mobile {
   box-sizing: border-box; 
   text-align: center; 
-  width: 38px;
-  height: 20px;
+  // width: 38px;
+  // height: 20px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
+  font-size: 15px;
 }
