--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -364,11 +364,12 @@
 .input-mobile {
   box-sizing: border-box; 
   text-align: center; 
-  width: 38px;
-  height: 20px;
+  // width: 38px;
+  // height: 20px;
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
+  font-size: 15px;
 }
 
 
