--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="row" style="padding-top: 10px;">
+        <!-- <div class="row" style="padding-top: 10px;">
             <div class="col-md-12">
                 <div class="label text-color">{{'contract-type.ceca' | translate}} <span class="required-title">*</span></div>
 
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
