--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -49,12 +49,12 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <div class="label_item">{{'contract-type.ceca' | translate}}</div>
         <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
           optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true">
         </p-dropdown>
-    </div>
+    </div> -->
   </div>
 
   <div class="col-md-2"></div>
