--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -141,14 +141,16 @@
       </div>
     </div>
     <div class="col-md-2"></div>
-    <div class="col-md-5">
+
+    <!--Đẩy lên ceca-->
+    <!-- <div class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'contract-type.ceca' | translate}}</div>
           <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
             optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true">
           </p-dropdown>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
