fix lỗi trắng hợp đồng khi back lại đối với tạo hợp đồng từ mẫu

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -111,7 +111,7 @@
     </div>
     <div class="footer-sample-contract">
       <div class="col-md-3">
-        <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button"
+        <button (click)="back($event, 'infor-contract-batch')" type="button" name="next" class="next action-button"
             style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     </div>
     <div class="col-md-9">
